cluster/infra/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    gateway: traefik
