cluster/infra/vault/server-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: vault-server
  namespace: vault
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - vault.k8s.local
  rules:
    - backendRefs:
        - name: vault
          port: 8200
